--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.fragment.MovieFragment">
+    tools:context=".ui.movie.MovieListFragment">
 
     <include layout="@layout/error_layout"
         android:visibility="gone"/>
